# AI_Research_and_Code_Assistant

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  ingest_knowledge.py  requirements.txt  source_of_all_knowledge.yml
.github/workflows/: pipeline.yml
crew_diffusion/: README.md  pyproject.toml
crew_diffusion/src/crew_diffusion/: crew.py  main.py
crew_diffusion/src/crew_diffusion/config/: agents.yaml  tasks.yaml
crew_diffusion/src/crew_diffusion/tools/: articles_tool.py  codes_tool.py
docs/: docker_fastapi_gradio.md
rag/: index_codes.ipynb  index_pdfs.ipynb  pipeline_manager.py
