[project]
name = "crew_diffusion"
version = "0.1.0"
description = "crew_diffusion using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
crew_diffusion = "crew_diffusion.main:run"
run_crew = "crew_diffusion.main:run"
train = "crew_diffusion.main:train"
replay = "crew_diffusion.main:replay"
test = "crew_diffusion.main:test"
run_with_trigger = "crew_diffusion.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
